--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script>
     <title>C3 Home Automation</title>
   </head>
   <body>
