--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script>
     <title>C3 Home Automation</title>
   </head>
   <body>
@@ -40,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    {# <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script> #}
+    <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script>
   </body>
 </html>
