--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Stylesheet from the CH5 sample vanilla app.  This is required for web components to function -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="%PUBLIC_URL%/vendor/ch5/themes/light-theme.css"
+    />
     <title>C3 Home Automation</title>
   </head>
   <body>
@@ -39,7 +46,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    {# <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script> #}
     <script src="%PUBLIC_URL%/vendor/ch5/cr-com-lib.js"></script>
   </body>
 </html>
